--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 
 services:
-  ghorde_surreal:
+  ghorde-surreal:
     image: surrealdb/surrealdb:latest
     container_name: ghorde_surrealdb
     restart: always
@@ -10,7 +10,7 @@ services:
       - 8000:8000
     volumes:
       - ./data:/data
-  ghorde_bot:
+  ghorde-bot:
     container_name: ghorde_bot
     build: 
       context: ./
