fix: workflow docker filename

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
           cd ~/ghorde
           git pull origin main
           git submodule update
-          docker-compose -f .\docker-compose.prod.yml down
-          docker-compose -f .\docker-compose.prod.yml up --build
+          docker-compose -f docker-compose.prod.yml down
+          docker-compose -f docker-compose.prod.yml up --build
           
