--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
           git pull origin main
           git submodule update
           docker-compose -f docker-compose.prod.yml down
-          docker-compose -f docker-compose.prod.yml up --build
+          docker-compose -f docker-compose.prod.yml up --build -d
           
