--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,6 +19,7 @@ services:
       - 5000:5000
     depends_on: 
       - ghorde-surreal-prod
+    restart: always
     environment:
       - PORT=5000 
       - SURREAL_LOC=http://ghorde-surreal-prod:8000/rpc 
@@ -30,6 +31,7 @@ services:
     build: 
       context: ./
       dockerfile: dockerfile.prod.bot
+    restart: always
     environment:
       - LOGGER_LEVEL=info
       - DEFAULT_PREFIX="!"
